# openai-agents

./: .gitignore  README.MD
01_AI-Agent-First/00_open_ai_api/chat_completion_api/: app.py
01_AI-Agent-First/02b_litellm-openaiagents/: Litellm_agent_sdk.ipynb
01_AI-Agent-First/09_DACA_Locacl_Devlopment/02_fastapi_openaiagents/: test_main.py
01_AI-Agent-First/09_DACA_Locacl_Devlopment/03_microservices_with_fastapi/: README.md  hello.py  pyproject.toml
01_AI-Agent-First/agents-sdk-decoded/: DETAILED_AGENTS_SDK_NOTES.md  README_agent_py_explanation.md
01_AI-Agent-First/deployment/: README.md
02_DACA_AGENT_NATIVE/: readme.md
02_DACA_AGENT_NATIVE/01_INTRO_FASTAPI/: readme.md
02_DACA_AGENT_NATIVE/01_INTRO_FASTAPI/fastapi-learning/: main.py  test.py  (+1 more)
02_DACA_AGENT_NATIVE/01_INTRO_FASTAPI/openai_agents_with_fastapi/fastapi-daca/: README.md  pyproject.toml
02_DACA_AGENT_NATIVE/03_dapr_intro/: readme.md
02_chainlite-chatbot/hello_agent/: chatbot.py
09_DACA_Locacl_Devlopment/: README.md
09_DACA_Locacl_Devlopment/01_uv_fastapi_pydantic/: README.MD
09_DACA_Locacl_Devlopment/02_fastapi_openaiagents/: main.py  pyproject.toml
09_DACA_Locacl_Devlopment/03_microservices_with_fastapi/: .gitignore
chainlite-chatbot/hello_agent/: pyproject.toml
context/: README.md
gruardrails/: README.md
n8n/: readme.md
n8n/01-build-and-sell-course1/: Nathan_s_workflow.json  readme.md
open_ai_api/chat_completion_api/: pyproject.toml
streaming-bot/: pyproject.toml
streaming-bot/src/streaming_bot/: __init__.py  main.py
tool-with-chainlit/: README.md  pyproject.toml
(+37 files in other folders)
