[project]
name = "fastapi-daca"
version = "0.1.0"
description = "ajmal khan aknizamani@gmail.com"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "openai-agents[litellm]>=0.0.16",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "python-dotenv>=1.1.0",
]
